--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
-	"require" : {},
+	"require" : {
+		"phpunit/phpunit" : "7.3.2"
+	},
     "require-dev": {
         "phpunit/phpunit": "^7"
     }
